# inferno

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/api/: chat.py  embeddings.py  search.py
src/core/: exceptions.py  provider.py  rag.py  router.py  schemas.py
src/infra/: error_handler.py
src/providers/: external_api.py  local_llm.py
src/store/: vector.py
tests/: test_router.py
